task1/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-app
  ports:
  - name: hello-port
    protocol: TCP
    port: 8000
    targetPort: web
  type: NodePort
