task1/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/dubinina($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              name: hello-port
